# contracts

./: .gitignore  Cargo.toml  README.md  litepaper.md  rust-toolchain.toml  rustfmt.toml
contracts/claim/: Cargo.toml
contracts/claim/src/: lib.rs
contracts/distribution/: Cargo.toml
contracts/distribution-lock/: Cargo.toml  README.md
contracts/distribution-lock/src/: error.rs  main.rs
contracts/distribution-type/: Cargo.toml
contracts/distribution-type/src/: error.rs  main.rs
contracts/distribution/src/: context.rs  error.rs  main.rs
contracts/proof/: Cargo.toml  README.md
contracts/proof-type/: Cargo.toml
contracts/proof-type/src/: error.rs  main.rs
contracts/proof/src/: error.rs  lib.rs  main.rs
contracts/vault/: Cargo.toml  README.md
contracts/vault-lock/: Cargo.toml  README.md
contracts/vault-lock/src/: error.rs  main.rs
contracts/vault-type/: Cargo.toml
contracts/vault-type/src/: context.rs  error.rs  main.rs
contracts/vault/src/: context.rs  error.rs  lib.rs  main.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: conversion.rs  error.rs  lib.rs  merkle.rs  type_id.rs  utils.rs  validation.rs
demo/: offckb.config.ts  package-lock.json  package.json  tsconfig.json
demo/offckb/: my-scripts.json  system-scripts.json
demo/src/: ccc-client.ts  claim-distribution.ts  claim-proof.ts  create-distribution.ts  create-proof.ts  create-vault.ts  decode.ts  dependencies.ts  index.ts  info.ts  melt-cell.ts  merkle.ts  reclaim-distribution.ts  refund-vault.ts  submit-proof.ts  type-id.ts  type.ts  utils.ts
docs/: design.md  litepaper.md
schemas/: base.mol  data.mol  distribution.mol  proof.mol  vault.mol
tests/: Cargo.toml
tests/src/: data.rs  hash.rs  lib.rs  tests.rs  util.rs
tests/src/tests/: distribution.rs  mod.rs  proof.rs  vault.rs
