[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/claim",
  "contracts/proof",
  "crates/*",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true

[workspace.dependencies]
cc = "1.2.21"
ckb-gen-types = "0.201.0"
ckb-hash = { version = "0.201.0", default-features = false }
ckb-std = "0.17.2"
faster-hex = { version = "0.10.0", default-features = false }
molecule = { version = "0.8.0", default-features = false }
molecule-codegen = "0.8.0"
