[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/distribution-lock",
  "contracts/distribution-type",
  "contracts/proof-type",
  "contracts/vault-type",
  "crates/*",
  "tests",
]

[profile.release]
overflow-checks = true
strip = false
codegen-units = 1
debug = true

[workspace.dependencies]
ckb-gen-types = "0.202.0"
ckb-hash = { version = "0.202.0", default-features = false }
ckb-std = "0.17.2"
faster-hex = { version = "0.10.0", default-features = false }
molecule = { version = "0.8.0", default-features = false }
molecule-codegen = "0.8.0"
