[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
native-simulator = ["ckb-testtool/native-simulator"]

[dependencies]
common = { path = "../crates/common", features = ["proof", "type_id", "distribution", "vault"] }
ckb-testtool = "0.15.0"
faster-hex.workspace = true
molecule.workspace = true
serde_json = "1.0"
