[package]
name = "claim"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common" }
ckb-hash = { workspace = true, features = ["ckb-contract"] }
ckb-std.workspace = true
molecule = { workspace = true, features = ["bytes_vec"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
