[package]
name = "proof-type"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common", default-features = false, features = [
  "proof",
] }
ckb-std = { workspace = true, features = ["type-id"] }
molecule.workspace = true

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
