[package]
name = "vault-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common", default-features = false, features = [
  "distribution",
  "vault",
] }
ckb-std.workspace = true
molecule.workspace = true

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
