[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../crates/common", default-features = false, features = [
  "distribution",
  "vault",
] }
ckb-hash = { workspace = true, default-features = false }
ckb-std.workspace = true
molecule = { workspace = true, features = ["bytes_vec"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]
