[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-hash.workspace = true
ckb-std.workspace = true
faster-hex.workspace = true
molecule.workspace = true

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]

[build-dependencies]
cc = "1.2.21"
ckb-gen-types = "0.201.0"
codegen = { package = "molecule-codegen", version = "0.8.0" }
