[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-hash = { workspace = true, features = ["ckb-contract"] }
ckb-std.workspace = true
faster-hex.workspace = true
molecule = { workspace = true, features = ["bytes_vec"] }

[features]
library = []
native-simulator = ["library", "ckb-std/native-simulator"]

[build-dependencies]
cc.workspace = true
ckb-gen-types.workspace = true
molecule-codegen.workspace = true
