[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-hash = { workspace = true, features = ["ckb-contract"] }
ckb-std.workspace = true
faster-hex.workspace = true
molecule = { workspace = true, features = ["bytes_vec"] }

[features]
default = []
distribution = []
proof = []
vault = []
type_id = []

[build-dependencies]
molecule-codegen.workspace = true
